# desdeo-ui-prototype

./: Dockerfile  README.txt  app.py  index.py  pyproject.toml  requirements.txt  server.py
assets/: bootstrap.min.css  custom-bootstrap.css  style.css  tooltip.js
components/: advanced.py  comparison.py  explanations.py  graphs.py  navbar.py  sidebar_explanations.py  sidebar_explanations_option1.py  sidebar_explanations_option2.py  sidebar_preferences.py  solutions_panel.py  solutions_table.py
data/: constants.py  river_pollution_10178.csv  sample_data.csv
layouts/: home.py  main_layout.py
pages/: callbacks.py
utils/: RXIMO.py  data_loader.py
